--- a/app/src/main/res/layout/dialog_new_stack.xml
+++ b/app/src/main/res/layout/dialog_new_stack.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/dialog"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/list"
+    <EditText
+        android:id="@+id/edit_stack_name"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" />
-</ScrollView>
+        android:layout_height="wrap_content" />
+</LinearLayout>
