--- a/app/src/main/res/layout/stack_menu.xml
+++ b/app/src/main/res/layout/stack_menu.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.notecardgame.isayyuhh.notecardgame.MainActivity">
+    tools:context=".activity.MainActivity">
 
     <ListView
         android:id="@+id/menu_list"
