--- a/app/src/main/res/layout/item_notecard.xml
+++ b/app/src/main/res/layout/item_notecard.xml
@@ -2,15 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="?android:attr/activatedBackgroundIndicator">
+    android:background="?android:attr/activatedBackgroundIndicator"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/notecard_front"
-        android:textSize="20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dip"
         android:layout_marginTop="20dip"
-        android:gravity="center_horizontal" />
+        android:gravity="center_horizontal"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/notecard_back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dip"
+        android:layout_marginTop="20dip"
+        android:gravity="center_horizontal"
+        android:textSize="20sp" />
 </LinearLayout>
