--- a/app/src/main/res/layout/list_notecard.xml
+++ b/app/src/main/res/layout/list_notecard.xml
@@ -7,12 +7,12 @@
     tools:context=".activity.MainActivity">
 
     <ListView
-        android:id="@+id/menu_list"
+        android:id="@+id/lv_notecard"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_notecard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
