--- a/app/src/main/res/menu/menu_select.xml
+++ b/app/src/main/res/menu/menu_select.xml
@@ -3,5 +3,5 @@
 
     <item
         android:id="@+id/delete"
-        android:title="@string/selection_delete" />
+        android:title="@string/literal_deleteselection" />
 </menu>
