--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,8 +11,8 @@
     tools:showIn="@layout/activity_main">
 
     <FrameLayout
-        android:id="@+id/listFragment"
+        android:id="@+id/fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/white" />
+        android:background="@color/colorBackground" />
 </LinearLayout>
