--- a/app/src/main/res/layout/item_notecard.xml
+++ b/app/src/main/res/layout/item_notecard.xml
@@ -1,25 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:cardview="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?android:attr/activatedBackgroundIndicator"
+    android:background="@color/colorBackground"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/notecard_front"
+    <cardview:android.support.v7.widget.CardView
+        android:id="@+id/notecard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dip"
-        android:layout_marginTop="20dip"
-        android:gravity="center_horizontal"
-        android:textSize="20sp" />
+        android:layout_margin="8dip"
+        android:background="?android:attr/activatedBackgroundIndicator"
+        android:orientation="vertical"
+        app:cardCornerRadius="8dip">
 
-    <TextView
-        android:id="@+id/notecard_back"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dip"
-        android:layout_marginTop="20dip"
-        android:gravity="center_horizontal"
-        android:textSize="20sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/notecard_front"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dip"
+                android:layout_marginTop="20dip"
+                android:gravity="center_horizontal"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/notecard_back"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dip"
+                android:layout_marginTop="20dip"
+                android:gravity="center_horizontal"
+                android:textSize="20sp" />
+        </LinearLayout>
+    </cardview:android.support.v7.widget.CardView>
 </LinearLayout>
