--- a/app/src/main/res/layout/list_stack.xml
+++ b/app/src/main/res/layout/list_stack.xml
@@ -8,6 +8,7 @@
 
     <ListView
         android:id="@+id/lv_stack"
+        android:divider="@color/colorBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
