--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorText">#FFFFFF</color>
-    <color name="colorBackground">#FFFFFF<!--#D3FFCE--></color>
+    <color name="colorBackground">#FFFFFF</color>
 </resources>
