--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -3,11 +3,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?android:attr/activatedBackgroundIndicator"
+    android:longClickable="false"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/stack_name"
+        android:id="@+id/list_item_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dip"
