--- a/app/src/main/res/layout/dialog_new_notecard.xml
+++ b/app/src/main/res/layout/dialog_new_notecard.xml
@@ -7,11 +7,13 @@
 
     <EditText
         android:id="@+id/edit_notecard_front"
+        android:hint="@string/literal_fronthint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <EditText
         android:id="@+id/edit_notecard_back"
+        android:hint="@string/literal_backhint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
