--- a/app/src/main/res/layout/list_item_main.xml
+++ b/app/src/main/res/layout/list_item_main.xml
@@ -10,8 +10,8 @@
         android:id="@+id/list_item_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dip"
-        android:layout_marginTop="20dip"
+        android:layout_margin="@dimen/list_item_margin"
         android:gravity="center_horizontal"
-        android:textSize="20sp" />
+        android:textColor="@color/colorAppText"
+        android:textSize="@dimen/text_size" />
 </LinearLayout>
