--- a/app/src/main/res/layout/item_notecard.xml
+++ b/app/src/main/res/layout/item_notecard.xml
@@ -1,34 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:cardview="http://schemas.android.com/tools"
-    android:background="?android:attr/activatedBackgroundIndicator"
+    android:clickable="true"
+    android:focusable="true"
+    android:focusableInTouchMode ="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:id="@+id/notecard_center"
+        android:orientation="vertical"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="0dip"/>
 
     <cardview:android.support.v7.widget.CardView
-        android:id="@+id/notecard"
+        android:id="@+id/notecard_front"
         android:layout_width="match_parent"
         android:layout_height="@dimen/notecard_height"
-        android:layout_margin="8dip"
-        android:orientation="vertical"
-        app:cardCornerRadius="8dip">
+        android:layout_margin="@dimen/standard_margin"
+        android:layout_above="@id/notecard_center"
+        app:cardCornerRadius="@dimen/standard_margin">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode ="true"
+            android:padding="@dimen/standard_margin">
+
+            <EditText
+                android:id="@+id/notecard_front_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:maxLength="@integer/max_notecard_side_length"
+                android:imeOptions="actionDone"
+                android:textColor="@color/colorAppText"
+                android:textSize="@dimen/text_size" />
 
             <TextView
-                android:id="@+id/notecard_side"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="20dip"
-                android:layout_marginTop="20dip"
-                android:gravity="center"
-                android:textSize="20sp" />
-        </LinearLayout>
+                android:id="@+id/notecard_front_hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:textColor="@color/colorAppTextHint"
+                android:textSize="@dimen/hint_text_size" />
+        </RelativeLayout>
     </cardview:android.support.v7.widget.CardView>
-</LinearLayout>
+
+    <cardview:android.support.v7.widget.CardView
+        android:id="@+id/notecard_back"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/notecard_height"
+        android:layout_margin="@dimen/standard_margin"
+        android:layout_below="@id/notecard_center"
+        app:cardCornerRadius="@dimen/standard_margin">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode ="true"
+            android:padding="@dimen/standard_margin">
+
+            <EditText
+                android:id="@+id/notecard_back_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:maxLength="@integer/max_notecard_side_length"
+                android:imeOptions="actionDone"
+                android:textColor="@color/colorAppText"
+                android:textSize="@dimen/text_size" />
+
+            <TextView
+                android:id="@+id/notecard_back_hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:textColor="@color/colorAppTextHint"
+                android:textSize="@dimen/hint_text_size" />
+        </RelativeLayout>
+    </cardview:android.support.v7.widget.CardView>
+</RelativeLayout>
