--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorText">#FFFFFF</color>
+    <color name="colorToolBarText">#FFFFFF</color>
+    <color name="colorAppText">#000000</color>
+    <color name="colorAppTextHint">#AAAAAA</color>
     <color name="colorBackground">#FFFFFF</color>
+    <color name="colorNotecard">#FDF5E8</color>
 </resources>
