--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="list_item_margin">20dip</dimen>
     <dimen name="notecard_height">200dip</dimen>
+    <dimen name="edit_icon_size">40dip</dimen>
+    <dimen name="standard_margin">8dip</dimen>
+    <dimen name="text_size">20sp</dimen>
+    <dimen name="hint_text_size">10sp</dimen>
 </resources>
