--- a/app/src/main/res/layout/dialog_new_notecard.xml
+++ b/app/src/main/res/layout/dialog_new_notecard.xml
@@ -10,6 +10,7 @@
         android:hint="@string/literal_fronthint"
         android:singleLine="true"
         android:maxLength="@integer/max_notecard_side_length"
+        android:layout_margin="@dimen/standard_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -18,6 +19,7 @@
         android:hint="@string/literal_backhint"
         android:singleLine="true"
         android:maxLength="@integer/max_notecard_side_length"
+        android:layout_margin="@dimen/standard_margin"
         android:imeOptions="actionDone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
