--- a/app/src/main/res/layout/dialog_new_stack.xml
+++ b/app/src/main/res/layout/dialog_new_stack.xml
@@ -10,6 +10,7 @@
         android:hint="@string/literal_stacknamehint"
         android:singleLine="true"
         android:maxLength="@integer/max_stack_name_length"
+        android:layout_margin="@dimen/standard_margin"
         android:imeOptions="actionDone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
