--- a/app/src/main/res/layout/dialog_new_notecard.xml
+++ b/app/src/main/res/layout/dialog_new_notecard.xml
@@ -7,7 +7,7 @@
 
     <EditText
         android:id="@+id/edit_notecard_front"
-        android:hint="@string/literal_fronthint"
+        android:hint="@string/dialog_fronthint"
         android:singleLine="true"
         android:maxLength="@integer/max_notecard_side_length"
         android:layout_margin="@dimen/standard_margin"
@@ -16,7 +16,7 @@
 
     <EditText
         android:id="@+id/edit_notecard_back"
-        android:hint="@string/literal_backhint"
+        android:hint="@string/dialog_backhint"
         android:singleLine="true"
         android:maxLength="@integer/max_notecard_side_length"
         android:layout_margin="@dimen/standard_margin"
