--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorToolBarText">#FFFFFF</color>
     <color name="colorAppText">#000000</color>
-    <color name="colorAppTextHint">#AAAAAA</color>
+    <color name="colorAppTextHint">#FFFFFF</color><!--#AAAAAA-->
     <color name="colorBackground">#FFFFFF</color>
-    <color name="colorNotecard">#FDF5E8</color>
+    <color name="colorNotecard">#bddfeb</color>
 </resources>
