--- a/app/src/main/res/menu/menu_select.xml
+++ b/app/src/main/res/menu/menu_select.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/swap"
+        android:orderInCategory="1"
+        android:title="@string/multi_swapselection" />
+    <item
         android:id="@+id/delete"
+        android:orderInCategory="2"
         android:title="@string/multi_deleteselection" />
 </menu>
