--- a/app/src/main/res/menu/menu_notecard.xml
+++ b/app/src/main/res/menu/menu_notecard.xml
@@ -2,6 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/save"
         android:title="@string/literal_save" />
 </menu>
