--- a/app/src/main/res/menu/menu_select.xml
+++ b/app/src/main/res/menu/menu_select.xml
@@ -2,11 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/swap"
+        android:id="@+id/edit"
         android:orderInCategory="1"
+        android:visible="false"
+        android:title="@string/multi_editselection" />
+    <item
+        android:id="@+id/swap"
+        android:orderInCategory="2"
+        android:visible="false"
         android:title="@string/multi_swapselection" />
     <item
         android:id="@+id/delete"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
         android:title="@string/multi_deleteselection" />
 </menu>
